--- a/assets/texts/fr/Changelog/0.1.html
+++ b/assets/texts/fr/Changelog/0.1.html
@@ -1,8 +1,8 @@
 <ul>
-<li><strong>Featured:</strong> </li>
-<li><strong>New:</strong> </li>
-<li><strong>Fixed:</strong> </li>
-<li><strong>Internal:</strong> </li>
+<li><strong>Mis en avant:</strong> </li>
+<li><strong>Nouveau:</strong> </li>
+<li><strong>Corrigé:</strong> </li>
+<li><strong>Interel:</strong> </li>
 </ul>
 
-More information <a href="https://github.com/rugk/unicodify/releases/tag/v0.1">on GitHub</a>.
+Plus d'informations <a href="https://github.com/rugk/unicodify/releases/tag/v0.1">sur Github</a>.
