--- a/src/background/background.html
+++ b/src/background/background.html
@@ -6,6 +6,8 @@ See also https://discourse.mozilla.org/t/using-es6-modules-in-background-scripts
 <html lang="en">
 	<head>
 		<meta charset="utf-8">
+		<!-- async currently disabled, because of https://bugzilla.mozilla.org/show_bug.cgi?id=1506464 -->
+		<script type="application/javascript" src="../browser-polyfill.js"></script>
 		<script async src="background.js" type="module" charset="utf-8"></script>
 	</head>
 	<body>
