--- a/src/options/options.html
+++ b/src/options/options.html
@@ -6,6 +6,7 @@
 		<link rel="stylesheet" href="../common/common.css">
 		<link rel="stylesheet" href="options.css">
 
+		<script type="application/javascript" src="../browser-polyfill.js"></script>
 		<script async src="./fastLoad.js" type="module"></script>
 
 		<script defer src="../common/common.js" type="module"></script>
@@ -14,6 +15,13 @@
 
 	<body>
 		<div class="message-container">
+			<div id="messageTips" aria-label="info message" data-i18n data-i18n-aria-label="__MSG_ariaMessageInfo__" class="message-box info invisible fade-hide">
+				<span class="message-text"></span>
+				<a href="#">
+					<button type="button" class="message-action-button micro-button info invisible"></button>
+				</a>
+				<img class="icon-dismiss invisible" src="/common/img/close.svg" width="24" height="24" tabindex="0" data-i18n data-i18n-aria-label="__MSG_dismissIconDescription__"></span>
+			</div>
 			<div id="messageInfo" aria-label="info message" data-i18n data-i18n-aria-label="__MSG_ariaMessageInfo__" class="message-box info invisible fade-hide">
 				<span class="message-text">Some settings are managed by your administrator and cannot be changed.</span>
 				<a href="#">
@@ -44,13 +52,53 @@
 			</div>
 		</div>
 		<form>
-			<ul>
-				<li>
-					<input class="setting save-on-change" type="checkbox" id="popupIconColored" name="popupIconColored">
-					<label data-i18n="__MSG_optionPopupIconColored__" for="popupIconColored">Colored icon</label>
-					<span data-i18n="__MSG_optionPopupIconColoredDescr__" class="helper-text">Shows a colored icon instead of the black/white icon in the toolbar.</span>
-				</li>
+			<section>
+				<ul>
+					<h1 data-i18n="">Unicode autocorrection</h1>
+					<span class="helper-text">With the exception of the smart quotes, all the autocorrections are done after typing the first nonmatching character following the character sequence, such as a space (␣). Press Backspace (⌫) to undo an autocorrection.</span>
+
+					<li>
+						<div class="line">
+							<input class="setting save-on-change" type="checkbox" id="autocorrectSymbols" data-optiongroup="autocorrect" name="autocorrectSymbols">
+							<label data-i18n="" for="autocorrectSymbols">Autocorrect Unicode Symbols</label>
+						</div>
+						<span data-i18n="" class="line indent helper-text">For example, this will replace <code>--</code>with –, <code>--></code>with ⟶ and <code>1/4</code>with ¼.</span>
+					</li>
+
+					<li>
+						<div class="line">
+							<input class="setting save-on-change" type="checkbox" id="autocorrectUnicodeQuotes" data-optiongroup="autocorrect" name="autocorrectUnicodeQuotes">
+							<label data-i18n="" for="autocorrectUnicodeQuotes">Use Unicode smart quotes</label>
+						</div>
+						<span data-i18n="" class="line indent helper-text">For example, this will replace <code>'</code>with ‘ or ’ and <code>"</code>with “ or ”.</span>
+					</li>
+
+					<li>
+						<div class="line">
+							<input class="setting save-on-change" type="checkbox" id="autocorrectUnicodeFracts" data-optiongroup="autocorrect" name="autocorrectUnicodeFracts">
+							<label data-i18n="" for="autocorrectUnicodeFracts">Convert fractions and mathematical constants to Unicode characters</label>
+						</div>
+						<span data-i18n="" class="line indent helper-text">For example, this will replace <code>1234.25</code>with 1234¼.</span>
+					</li>
+				</ul>
+			</section>
+
+			<div>
+				<hr /><br />
+				<button data-i18n="__MSG_optionsResetButton__" type="button" id="resetButton">Reset all settings to defaults</button>
+			</div>
 		</form>
+
+		<p class="helper-text">
+			<span data-i18n="__MSG_translatorCredit__" data-opt-i18n-keep-children>
+				This add-on has been translated into English by
+				<a data-i18n="__MSG_translatorUsername__" data-i18n-href="__MSG_translatorLink__" href="https://github.com/XY">somone</a>.
+			</span>
+			<span data-i18n="__MSG_contributorsThanks__" data-opt-i18n-keep-children>
+				Also thanks to
+				<a data-i18n="__MSG_contributorsThanksLinkText__" data-i18n-href="__MSG_contributorsThanksLink__" href="https://github.com/XY">all other contributors</a>.
+			</span>
+		</p>
 	</body>
 
 </html>
