Added Unicode Font Conversion.

--- a/src/options/options.html
+++ b/src/options/options.html
@@ -83,6 +83,29 @@
 				</ul>
 			</section>
 
+			<section class="mobile-incompatible">
+				<ul>
+					<h1 data-i18n="">Context menu</h1>
+					<span class="helper-text">Highlight editable text and open the context menu to quickly change the characters to a different Unicode font or change the case.</span>
+
+					<li>
+						<div class="line">
+							<input class="setting save-on-change" type="checkbox" id="changeFont" data-optiongroup="unicodeFont" name="changeFont">
+							<label data-i18n="" for="changeFont">Change Unicode font</label>
+						</div>
+						<span data-i18n="" class="line indent helper-text">For example, ˢᵘᵖᵉʳˢᶜʳⁱᵖᵗ, ꜱᴍᴀʟʟ ᴄᴀᴘꜱ, 𝒮𝒸𝓇𝒾𝓅𝓉, 𝔉𝔯𝔞𝔨𝔱𝔲𝔯, 🅒🅘🅡🅒🅛🅔🅓 and 🆂🆀🆄🅰🆁🅴🅳. Useful on websites that do not support changing the font and/or text formatting.</span>
+					</li>
+
+					<li>
+						<div class="line">
+							<input class="setting save-on-change" type="checkbox" id="changeCase" data-optiongroup="unicodeFont" name="changeCase">
+							<label data-i18n="" for="changeCase">Change case</label>
+						</div>
+						<span data-i18n="" class="line indent helper-text">For example, UPPER CASE, lower case, Capitalize Each Word and tOGGLE cASE.</span>
+					</li>
+				</ul>
+			</section>
+
 			<div>
 				<hr /><br />
 				<button data-i18n="__MSG_optionsResetButton__" type="button" id="resetButton">Reset all settings to defaults</button>
