Made requested changes.

--- a/src/options/options.html
+++ b/src/options/options.html
@@ -55,7 +55,7 @@
 			<section>
 				<ul>
 					<h1 data-i18n="">Unicode autocorrection</h1>
-					<span class="helper-text">With the exception of the smart quotes, all the autocorrections are done after typing the first nonmatching character following the character sequence, such as a space (␣). Press Backspace (⌫) to undo an autocorrection.</span>
+					<span class="helper-text">With the exception of the smart quotes, all the autocorrections are done after typing the first nonmatching character following the character sequence, such as a space (␣). Press Backspace (⌫) to undo an autocorrection.</span><br>
 
 					<span class="helper-text">For Emoji autocorrection, including <code>:colon:</code> shortcodes and Emoticons, please try our 🤩 <a href="https://github.com/rugk/awesome-emoji-picker">Awesome Emoji Picker</a> add-on.</span>
 
