--- a/src/options/options.html
+++ b/src/options/options.html
@@ -87,6 +87,7 @@
 				</ul>
 			</section>
 
+			<!-- Remove "mobile-incompatible" once https://bugzilla.mozilla.org/show_bug.cgi?id=1595822 is fixed -->
 			<section class="mobile-incompatible">
 				<ul>
 					<h1 data-i18n="">Context menu</h1>
