feat: allow showing the plain tzext of a transformation

--- a/src/options/options.html
+++ b/src/options/options.html
@@ -112,6 +112,14 @@
 						</div>
 						<span data-i18n="__MSG_optionMenuCasingDescr__" class="line indent helper-text">For example, “UPPER CASE”, “lower case”, “Capitalize Each Word” or “tOGGLE cASE”.</span>
 					</li>
+
+					<li>
+						<div class="line">
+							<input class="setting save-on-change" type="checkbox" id="showReadableText" data-optiongroup="unicodeFont" name="showReadableText">
+							<label data-i18n="__MSG_optionMenuShowReadableText__" for="showReadableText">Show a readable description of the transformation</label>
+						</div>
+						<span data-i18n="__MSG_optionMenuShowReadableTextDescr__" class="line indent helper-text">In addition to the examples of the transformation, this also shows the name of transformation as text.</span>
+					</li>
 				</ul>
 			</section>
 
