--- a/src/options/options.html
+++ b/src/options/options.html
@@ -113,12 +113,21 @@
 						<span data-i18n="__MSG_optionMenuCasingDescr__" class="line indent helper-text">For example, “UPPER CASE”, “lower case”, “Capitalize Each Word” or “tOGGLE cASE”.</span>
 					</li>
 
+					<h2 data-i18n="__MSG_subtitleEntryPreview__">Entry design</h2>
 					<li>
 						<div class="line">
 							<input class="setting save-on-change" type="checkbox" id="showReadableText" data-optiongroup="unicodeFont" name="showReadableText">
 							<label data-i18n="__MSG_optionMenuShowReadableText__" for="showReadableText">Show a readable description of the transformation</label>
 						</div>
 						<span data-i18n="__MSG_optionMenuShowReadableTextDescr__" class="line indent helper-text">In addition to the examples of the transformation, this also shows the name of transformation as text.</span>
+					</li>
+
+					<li>
+						<div class="line">
+							<input class="setting save-on-change" type="checkbox" id="livePreview" data-optiongroup="unicodeFont" name="livePreview">
+							<label data-i18n="__MSG_optionMenuShowLivePreview__" for="livePreview">Show a live preview with the selected text</label>
+						</div>
+						<span data-i18n="__MSG_optionMenuShowLivePreviewDescr__" class="line indent helper-text">Shows the effect of the transformation on the selected text instead of an example one.</span>
 					</li>
 				</ul>
 			</section>
