fix: show option in Thunderbird, not only Firefox

--- a/src/options/options.html
+++ b/src/options/options.html
@@ -123,7 +123,7 @@
 						<span data-i18n="__MSG_optionMenuShowReadableTextDescr__" class="line indent helper-text">In addition to the examples of the transformation, this also shows the name of transformation as text.</span>
 					</li>
 
-					<li class="firefox-only">
+					<li class="mozilla-only">
 						<div class="line">
 							<input class="setting save-on-change" type="checkbox" id="livePreview" data-optiongroup="unicodeFont" name="livePreview">
 							<label data-i18n="__MSG_optionMenuShowLivePreview__" for="livePreview">Show a live preview with the selected text</label>
