--- a/src/tests/index.html
+++ b/src/tests/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<meta charset="utf-8">
-	<title>Unicodify – Text reshaper ‒ Mocha Tests</title>
+	<title>Unicodify – Text transformer ‒ Mocha Tests</title>
 	<link href="https://unpkg.com/mocha@5.2.0/mocha.css" rel="stylesheet" />
 	<link rel="shortcut icon" href="../icons/icon-small-colored.svg">
 	<link href="./index.css" rel="stylesheet" />
