doc: add AMO & Readme description
Fixes https://github.com/rugk/unicodify/issues/20

--- a/assets/texts/en/amoDescription.html
+++ b/assets/texts/en/amoDescription.html
@@ -1,1 +1,34 @@
-export your Readme here, and potentially adjust it…
+<p>This is a (Firefox and Thunderbird) add-on (WebExtension) that allows you to autocorrect common text sequences and convert text characters to a look like a special font.
+For instance, it converts quotes like <code>"these"</code> to <code>“these”</code>, which are typographically correct.</p>
+<p>Additionally, you can convert text into more than 20 different font styles and camel casing changes.
+You can enable and disable any features in the options and adjust more settings regarding the behavior of the add-on.</p>
+<p>This extension only works with modern Firefox and Thunderbird v78 or higher.</p>
+
+<b>Features</b>
+<ul>
+	<li>Unicode autocorrection as you type:<ul>
+			<li>Autocorrect <a href="https://en.wikipedia.org/wiki/Miscellaneous_Symbols">Unicode symbols</a> (i.e. hyphens <code>--</code> with –, fractions <code>1/4</code> with ¼, etc.). Supports more
+				than 85 symbols.</li>
+			<li>Use Unicode smart quotes ('single quotes' with ‘Unicode single quotes’ and "double quotes" with “Unicode double quotes”)</li>
+			<li>Convert <a href="https://en.wikipedia.org/wiki/Number_Forms">fractions</a> and <a href="https://en.wikipedia.org/wiki/Mathematical_constant">mathematical constants</a> to Unicode characters (i.e. <code>1234.25</code>
+				with 1234¼, etc.). Supports all Unicode fraction characters, Pi and e constants.</li>
+			<li>Supports undoing autocorrections</li>
+		</ul>
+	</li>
+	<li>Context menu with selected/highlighted text:<ul>
+			<li><a href="https://en.wikipedia.org/wiki/Mathematical_Alphanumeric_Symbols">Unicode font</a> conversion (i.e. ꜱᴍᴀʟʟ ᴄᴀᴘꜱ, 𝒮𝒸𝓇𝒾𝓅𝓉, 𝔉𝔯𝔞𝔨𝔱𝔲𝔯, etc.). Supports more than 20 fonts.</li>
+			<li>Change <a href="https://en.wikipedia.org/wiki/Letter_case#Case_styles">casing</a> (i.e. UPPER CASE, lower case, tOGGLE, cASE, etc.). Supports all locales.</li>
+			<li>Optionally show a live preview.</li>
+			<li>Useful on websites that do not support changing the font or text formatting.</li>
+		</ul>
+	</li>
+	<li>Support websites as best as possible by providing website-specific possibles, if needed. (<a href="https://github.com/rugk/unicodify/issues">if there is a problem, please report it</a>)</li>
+	<li>Very fast, even when typing on large documents.</li>
+	<li>Supports the light/dark mode of your system automatically.</li>
+	<li>Settings automatically synced between all browser instances and devices (Firefox and Chrome only).</li>
+	<li>Follows the <a href="https://design.firefox.com/photon">Firefox</a> and <a href="https://style.thunderbird.net/">Thunderbird</a> Photon Design.</li>
+	<li>Puts your privacy first and does not send data anywhere.</li>
+	<li>Compatible with Firefox for Android.</li>
+	<li>Translated into several languages. <a href="https://github.com/rugk/unicodify/blob/main/CONTRIBUTING.md#Translations">Contribute your own language!</a></li>
+	<li>Settings can be managed by your administrator.</li>
+</ul>
