feat: add boilerplate and list styles

--- a/assets/texts/en/amoDescription.html
+++ b/assets/texts/en/amoDescription.html
@@ -2,9 +2,33 @@ This is a (Firefox and Thunderbird) add-on (WebExtension) that allows you to aut
 For instance, it converts quotes like <code>"these"</code> to <code>“these”</code>, which are typographically correct.
 Additionally, you can convert text into more than 20 different font styles and casing changes.
 You can enable and disable any features in the options and adjust more settings regarding the behavior of the add-on.
-This extension only works with modern Firefox and Thunderbird v78 or higher.
 
-<b>Features</b>
+<b>😊 Convert text to any style you want! 😊</b>
+
+Just select text, right-click and let Unicodify convert the text into styles like:
+<ul>
+	<li>Lowercase</li>
+	<li>Uppercase</li>
+	<li>Capitalize Each Word</li>
+	<li>Toggle Case</li>
+	<li>Superscript</li>
+	<li>Small Caps</li>
+	<li>Unicase</li>
+	<li>Serif</li>
+	<li>Sans-serif</li>
+	<li>Bold</li>
+	<li>Italic</li>
+	<li>Script</li>
+	<li>Fraktur</li>
+	<li>Monospace</li>
+	<li>Double-struck</li>
+	<li>Circled</li>
+	<li>Squared</li>
+	<li>Fullwidth</li>
+</ul>
+
+<b>📢 More Features 📢</b>
+
 <ul>
 	<li>Unicode autocorrection as you type:<ul>
 			<li>Autocorrect <a href="https://en.wikipedia.org/wiki/Miscellaneous_Symbols">Unicode symbols</a> (i.e. hyphens <code>--</code> with –, fractions <code>1/4</code> with ¼, etc.). Supports more
@@ -32,3 +56,27 @@ This extension only works with modern Firefox and Thunderbird v78 or higher.
 	<li>Translated into several languages. <a href="https://github.com/rugk/unicodify/blob/main/CONTRIBUTING.md#Translations">Contribute your own language!</a></li>
 	<li>Settings can be managed by your administrator.</li>
 </ul>
+
+
+
+<b>📝 Development 📝</b>
+The add-on is free/libre open-source software and developed on GitHub. <a href="https://github.com/rugk/unicodify">Fork it on GitHub</a> and contribute.
+<a href="https://github.com/rugk/unicodify/contribute">There are some easy issues to start with.</a>
+
+This extension only works with modern Firefox and Thunderbird v78 or higher.
+
+
+<b>🐬 Contribute 🐬</b>
+You can easily get involved in this project and help. Here are some ideas:
+<ul>
+<li>📃 <a href="https://github.com/rugk/unicodify/blob/master/CONTRIBUTING.md#translations">Translate this add-on into multiple languages!</a></li>
+<li>🐛 <a href="https://github.com/rugk/unicodify/blob/master/CONTRIBUTING.md#coding">Fix some easy issues and get started in add-on development</a> (or just try out the development version)</li>
+<li>💡 <a href="https://github.com/rugk/unicodify/blob/master/CONTRIBUTING.md#need-ideas">Or check out some other add-on issues</a> (or translate them).</li>
+</ul>
+Or, in any case, <a href="https://github.com/rugk/unicodify/blob/master/CONTRIBUTING.md#support-us">support us by spreading the word!</a> ❤️
+
+
+
+<b>🗯️ Permissions 🗯️</b>
+This add-on requires as few permissions as possible.
+An explanation of all permissions, this add-on requests, can be found <a href="https://github.com/rugk/unicodify/blob/master/assets/texts/en/permissions.md">on this site</a>.
