style: bullet points only list features

--- a/assets/texts/en/amoDescription.html
+++ b/assets/texts/en/amoDescription.html
@@ -27,6 +27,8 @@ Just select text, right-click and let Unicodify convert the text into styles lik
 	<li>Fullwidth</li>
 </ul>
 
+This is useful on websites that do not support changing the font or text formatting.
+
 <b>📢 More Features 📢</b>
 
 <ul>
@@ -41,9 +43,8 @@ Just select text, right-click and let Unicodify convert the text into styles lik
 	</li>
 	<li>Context menu with selected/highlighted text:<ul>
 			<li><a href="https://en.wikipedia.org/wiki/Mathematical_Alphanumeric_Symbols">Unicode font</a> conversion (i.e. ꜱᴍᴀʟʟ ᴄᴀᴘꜱ, 𝒮𝒸𝓇𝒾𝓅𝓉, 𝔉𝔯𝔞𝔨𝔱𝔲𝔯, etc.). Supports more than 20 fonts.</li>
-			<li>Change <a href="https://en.wikipedia.org/wiki/Letter_case#Case_styles">casing</a> (i.e. UPPER CASE, lower case, tOGGLE, cASE, etc.). Supports all locales.</li>
+			<li>Change <a href="https://en.wikipedia.org/wiki/Letter_case#Case_styles">casing</a> (i.e. UPPER CASE, lower case, tOGGLE cASE, etc.). Supports all locales.</li>
 			<li>Optionally show a live preview.</li>
-			<li>Useful on websites that do not support changing the font or text formatting.</li>
 		</ul>
 	</li>
 	<li>Support websites as best as possible by providing website-specific possibles, if needed. (<a href="https://github.com/rugk/unicodify/issues">if there is a problem, please report it</a>)</li>
