feat: add a list of some corrected symbols

--- a/assets/texts/en/amoDescription.html
+++ b/assets/texts/en/amoDescription.html
@@ -3,6 +3,7 @@ For instance, it converts quotes like <code>"these"</code> to <code>“these”<
 Additionally, you can convert text into more than 20 different font styles and casing changes.
 You can enable and disable any features in the options and adjust more settings regarding the behavior of the add-on.
 
+
 <b>😊 Convert text to any style you want! 😊</b>
 
 Just select text, right-click and let Unicodify convert the text into styles like:
@@ -28,6 +29,25 @@ Just select text, right-click and let Unicodify convert the text into styles lik
 </ul>
 
 This is useful on websites that do not support changing the font or text formatting.
+
+
+<b>✍️ Improve your typographic style! ✍️</b>
+
+When writing on any website, this add-on optionally corrects your writing by using proper quotation marks or common symbols like arrows, fractions or mathematical signs.
+
+Some examples:
+<ul>
+	<li><code>...</code> is corrected into <code>…</code></li>
+	<li><code>~=</code> is corrected into <code>≅</code></li>
+	<li><code>+-</code> is corrected into <code>±</code></li>
+	<li><code>-+</code> is corrected into <code>∓</code></li>
+	<li><code>&gt;=</code> is corrected into <code>≥</code></li>
+	<li><code>1/4</code> is corrected into <code>¼</code></li>
+	<li><code>--></code> is corrected into <code>⟶</code></li>
+	<li><code>--></code> is corrected into <code>⟶</code></li>
+	<li><code><==></code> is corrected into <code>⟺</code></li>
+	<li>and much more…</li>
+</ul>
 
 <b>📢 More Features 📢</b>
 
