doc: change contribute icon to 🙋‍♀️
which is better than dolphins

--- a/assets/texts/en/amoDescription.html
+++ b/assets/texts/en/amoDescription.html
@@ -87,7 +87,7 @@ The add-on is free/libre open-source software and developed on GitHub. <a href="
 This extension only works with modern Firefox and Thunderbird v78 or higher.
 
 
-<b>🐬 Contribute 🐬</b>
+<b>🙋‍♀️ Contribute 🙋‍♀️</b>
 You can easily get involved in this project and help. Here are some ideas:
 <ul>
 <li>📃 <a href="https://github.com/rugk/unicodify/blob/master/CONTRIBUTING.md#translations">Translate this add-on into multiple languages!</a></li>
