--- a/assets/texts/en/amoDescription.html
+++ b/assets/texts/en/amoDescription.html
@@ -98,6 +98,6 @@ Or, in any case, <a href="https://github.com/rugk/unicodify/blob/master/CONTRIBU
 
 
 
-<b>🗯️ Permissions 🗯️</b>
+<b>💬 Permissions 💬</b>
 This add-on requires as few permissions as possible.
 An explanation of all permissions, this add-on requests, can be found <a href="https://github.com/rugk/unicodify/blob/master/assets/texts/en/permissions.md">on this site</a>.
