--- a/assets/texts/en/amoDescription.html
+++ b/assets/texts/en/amoDescription.html
@@ -84,7 +84,7 @@ Some examples:
 The add-on is free/libre open-source software and developed on GitHub. <a href="https://github.com/rugk/unicodify">Fork it on GitHub</a> and contribute.
 <a href="https://github.com/rugk/unicodify/contribute">There are some easy issues to start with.</a>
 
-This extension only works with modern Firefox and Thunderbird v78 or higher.
+This extension works with modern Firefox and Thunderbird v78 or higher.
 
 
 <b>🙋‍♀️ Contribute 🙋‍♀️</b>
