doc: encode special HTML chars

--- a/assets/texts/en/amoDescription.html
+++ b/assets/texts/en/amoDescription.html
@@ -1,5 +1,5 @@
 This is a (Firefox and Thunderbird) add-on (WebExtension) that allows you to autocorrect common text sequences and convert text characters to a look like a special font.
-For instance, it converts quotes like <code>"these"</code> to <code>“these”</code>, which are typographically correct.
+For instance, it converts quotes like <code>&quot;these&quot;</code> to <code>“these”</code>, which are typographically correct.
 Additionally, you can convert text into more than 20 different font styles and casing changes.
 You can enable and disable any features in the options and adjust more settings regarding the behavior of the add-on.
 
@@ -45,7 +45,7 @@ Some examples:
 	<li><code>1/4</code> is corrected into <code>¼</code></li>
 	<li><code>--></code> is corrected into <code>⟶</code></li>
 	<li><code>--></code> is corrected into <code>⟶</code></li>
-	<li><code><==></code> is corrected into <code>⟺</code></li>
+	<li><code>&lt;==&gt;</code> is corrected into <code>⟺</code></li>
 	<li>and much more…</li>
 </ul>
 
