fix: fix wrong word choice
We aim for workarounds. :)

--- a/assets/texts/en/amoDescription.html
+++ b/assets/texts/en/amoDescription.html
@@ -66,7 +66,7 @@ Some examples:
 			<li>Optionally show a live preview.</li>
 		</ul>
 	</li>
-	<li>Support websites as best as possible by providing website-specific possibles, if needed. (<a href="https://github.com/rugk/unicodify/issues">if there is a problem, please report it</a>)</li>
+	<li>Support websites as best as possible by providing website-specific workarounds or fallbacks, if needed. (<a href="https://github.com/rugk/unicodify/issues">if there is a problem, please report it</a>)</li>
 	<li>Very fast, even when typing on large documents.</li>
 	<li>Supports the light/dark mode of your system automatically.</li>
 	<li>Settings automatically synced between all browser instances and devices (Firefox and Chrome only).</li>
