Added option to disable autocorrect feature by default.

--- a/src/options/options.html
+++ b/src/options/options.html
@@ -65,27 +65,39 @@
 				<ul>
 					<li>
 						<div class="line">
-							<input class="setting save-on-change" type="checkbox" id="autocorrectSymbols" data-optiongroup="autocorrect" name="autocorrectSymbols">
-							<label
-							data-i18n="__MSG_optionAutocorrectSymbols__" for="autocorrectSymbols">Autocorrect Unicode symbols</label>
+							<input class="setting save-on-change" type="checkbox" id="autocorrect" data-optiongroup="autocorrect" name="enabled">
+							<label for="autocorrect">Enable autocorrection</label>
 						</div>
-						<span data-i18n="__MSG_optionAutocorrectSymbolsDescr__" data-opt-i18n-keep-children class="line indent helper-text">For example, this will replace <code>--</code> with –, <code>--></code> with ⟶ and <code>1/4</code> with ¼.</span>
+						<span class="line indent helper-text">Enable the experimental Unicode autocorrection feature. ⚠️ This is for testing only.</span>
 					</li>
 
 					<li>
-						<div class="line">
-							<input class="setting save-on-change" type="checkbox" id="autocorrectUnicodeQuotes" data-optiongroup="autocorrect" name="autocorrectUnicodeQuotes">
-							<label data-i18n="__MSG_optionReplaceQuotes__" for="autocorrectUnicodeQuotes">Replace quotes with typographical ones</label>
-						</div>
-						<span data-i18n="__MSG_optionReplaceQuotesDescr__" class="line indent helper-text">This will replace "these ('replacement') quotes" with the so-called “smart quotes”, respectively their “somewhat ‘smaller’ variant”.</span>
-					</li>
+						<ul>
+							<li>
+								<div class="line">
+									<input class="setting save-on-change" type="checkbox" id="autocorrectSymbols" data-optiongroup="autocorrect" name="autocorrectSymbols">
+									<label
+									data-i18n="__MSG_optionAutocorrectSymbols__" for="autocorrectSymbols">Autocorrect Unicode symbols</label>
+								</div>
+								<span data-i18n="__MSG_optionAutocorrectSymbolsDescr__" data-opt-i18n-keep-children class="line indent helper-text">For example, this will replace <code>--</code> with –, <code>--></code> with ⟶ and <code>1/4</code> with ¼.</span>
+							</li>
 
-					<li>
-						<div class="line">
-							<input class="setting save-on-change" type="checkbox" id="autocorrectUnicodeFracts" data-optiongroup="autocorrect" name="autocorrectUnicodeFracts">
-							<label data-i18n="__MSG_optionConvertFractions__" data-opt-i18n-keep-children for="autocorrectUnicodeFracts">Convert fractions and mathematical constants to Unicode characters</label>
-						</div>
-						<span data-i18n="__MSG_optionConvertFractionsDescr__" data-opt-i18n-keep-children class="line indent helper-text">For example, this will replace <code>1234.25</code> with 1234¼.</span>
+							<li>
+								<div class="line">
+									<input class="setting save-on-change" type="checkbox" id="autocorrectUnicodeQuotes" data-optiongroup="autocorrect" name="autocorrectUnicodeQuotes">
+									<label data-i18n="__MSG_optionReplaceQuotes__" for="autocorrectUnicodeQuotes">Replace quotes with typographical ones</label>
+								</div>
+								<span data-i18n="__MSG_optionReplaceQuotesDescr__" class="line indent helper-text">This will replace "these ('replacement') quotes" with the so-called “smart quotes”, respectively their “somewhat ‘smaller’ variant”.</span>
+							</li>
+
+							<li>
+								<div class="line">
+									<input class="setting save-on-change" type="checkbox" id="autocorrectUnicodeFracts" data-optiongroup="autocorrect" name="autocorrectUnicodeFracts">
+									<label data-i18n="__MSG_optionConvertFractions__" data-opt-i18n-keep-children for="autocorrectUnicodeFracts">Convert fractions and mathematical constants to Unicode characters</label>
+								</div>
+								<span data-i18n="__MSG_optionConvertFractionsDescr__" data-opt-i18n-keep-children class="line indent helper-text">For example, this will replace <code>1234.25</code> with 1234¼.</span>
+							</li>
+						</ul>
 					</li>
 				</ul>
 			</section>
