Updated AMO and ATN descriptions.

--- a/assets/texts/en/amoDescription.html
+++ b/assets/texts/en/amoDescription.html
@@ -48,6 +48,8 @@ Some examples:
 	<li>and much more…</li>
 </ul>
 
+ℹ️ The Unicode autocorrection feature is experimental and must be enabled in the settings.
+
 <b>📢 More Features 📢</b>
 
 <ul>
