--- a/assets/texts/en/atnDescription.html
+++ b/assets/texts/en/atnDescription.html
@@ -4,6 +4,8 @@ Additionally, you can convert text into more than 20 different font styles and c
 You can enable and disable any features in the options and adjust more settings regarding the behavior of the add-on.
 
 
+⚠️ Note that context menu does <strong>NOT</strong> currently work in Thunderbird's compose body because of <a href="https://bugzilla.mozilla.org/show_bug.cgi?id=1716976">Bug 1716976</a>.
+
 <b>Convert text to any style you want!</b>
 
 Just select text, right-click and let Unicodify convert the text into styles like:
@@ -28,8 +30,6 @@ Just select text, right-click and let Unicodify convert the text into styles lik
 	<li>Fullwidth</li>
 </ul>
 
-⚠️ Note that context menu does NOT currently work in Thunderbird's compose body because of <a href="https://bugzilla.mozilla.org/show_bug.cgi?id=1716976">Bug 1716976</a>.
-
 
 <b>✍️ Improve your typographic style! ✍️</b>
 
@@ -47,6 +47,8 @@ Some examples:
 	<li><code>&lt;==&gt;</code> is corrected into <code>⟺</code></li>
 	<li>and much more…</li>
 </ul>
+
+ℹ️ The Unicode autocorrection feature is experimental and must be enabled in the settings.
 
 <b>More Features</b>
 
