Added notifications on install and update.

--- a/src/options/options.html
+++ b/src/options/options.html
@@ -154,6 +154,19 @@
 				</ul>
 			</section>
 
+			<section>
+				<h1>Notifications</h1>
+
+				<ul>
+					<li>
+						<div class="line">
+							<input class="setting save-on-change" type="checkbox" id="send" data-optiongroup="notifications" name="send">
+							<label for="send">Display Desktop notifications</label>
+						</div>
+					</li>
+				</ul>
+			</section>
+
 			<div>
 				<hr /><br />
 				<button data-i18n="__MSG_optionsResetButton__" type="button" id="resetButton">Reset all settings to defaults</button>
