Updated ATN description about #73.

--- a/assets/texts/en/atnDescription.html
+++ b/assets/texts/en/atnDescription.html
@@ -4,7 +4,7 @@ Additionally, you can convert text into more than 20 different font styles and c
 You can enable and disable any features in the options and adjust more settings regarding the behavior of the add-on.
 
 
-⚠️ Note that context menu does <strong>NOT</strong> currently work in Thunderbird's compose body because of <a href="https://bugzilla.mozilla.org/show_bug.cgi?id=1716976">Bug 1716976</a>.
+⚠️ This extension requires at least Thunderbird 111 for the context menu to work in the compose body due to <a href="https://bugzilla.mozilla.org/show_bug.cgi?id=1716976">Bug 1716976</a>.
 
 <b>Convert text to any style you want!</b>
 
