Apply suggestions from code review.
Co-authored-by: rugk <rugk+git@posteo.de>

--- a/src/options/options.html
+++ b/src/options/options.html
@@ -147,7 +147,7 @@
 					<li>
 						<div class="line">
 							<input class="setting save-on-change" type="checkbox" id="nested" data-optiongroup="unicodeFont" name="nested">
-							<label for="nested">Create nested context menu</label>
+							<label for="nested" data-i18n="__MSG_optionMenuNested__">Create nested context menu</label>
 						</div>
 					</li>
 
