Removed references to the Unicode autocorrect feature from AMO/ATN.

--- a/assets/texts/en/atnDescription.html
+++ b/assets/texts/en/atnDescription.html
@@ -1,10 +1,6 @@
-This is a (Firefox and Thunderbird) add-on (MailExtension) that allows you to autocorrect common text sequences and convert text characters to a look like a special font.
-For instance, it converts quotes like <code>&quot;these&quot;</code> to <code>“these”</code>, which are typographically correct.
-Additionally, you can convert text into more than 20 different font styles and casing changes.
+This is a (Firefox and Thunderbird) add-on (MailExtension) that allows you to convert text into more than 40 different font styles and casing changes.
 You can enable and disable any features in the options and adjust more settings regarding the behavior of the add-on.
 
-
-⚠️ This extension requires at least Thunderbird 111 for the context menu to work in the compose body due to <a href="https://bugzilla.mozilla.org/show_bug.cgi?id=1716976">Bug 1716976</a>.
 
 <b>Convert text to any style you want!</b>
 
@@ -31,29 +27,10 @@ Just select text, right-click and let Unicodify convert the text into styles lik
 </ul>
 
 
-<b>✍️ Improve your typographic style! ✍️</b>
-
-When writing on any e-mail, this add-on optionally corrects your writing by using proper quotation marks or common symbols like arrows, fractions or mathematical signs.
-
-Some examples:
-<ul>
-	<li><code>...</code> is corrected into <code>…</code></li>
-	<li><code>~=</code> is corrected into <code>≅</code></li>
-	<li><code>+-</code> is corrected into <code>±</code></li>
-	<li><code>-+</code> is corrected into <code>∓</code></li>
-	<li><code>&gt;=</code> is corrected into <code>≥</code></li>
-	<li><code>1/4</code> is corrected into <code>¼</code></li>
-	<li><code>--></code> is corrected into <code>⟶</code></li>
-	<li><code>&lt;==&gt;</code> is corrected into <code>⟺</code></li>
-	<li>and much more…</li>
-</ul>
-
-ℹ️ The Unicode autocorrection feature is experimental and must be enabled in the settings.
-
 <b>More Features</b>
 
 <ul>
-	<li>Unicode autocorrection as you type:<ul>
+	<li>*Unicode autocorrection as you type:<ul>
 			<li>Autocorrect <a href="https://en.wikipedia.org/wiki/Miscellaneous_Symbols">Unicode symbols</a> (i.e. hyphens <code>--</code> with –, fractions <code>1/4</code> with ¼, etc.). Supports more
 				than 85 symbols.</li>
 			<li>Use Unicode smart quotes ('single quotes' with ‘Unicode single quotes’ and "double quotes" with “Unicode double quotes”)</li>
@@ -76,13 +53,14 @@ Some examples:
 	<li>Settings can be managed by your administrator.</li>
 </ul>
 
+* ℹ️ The Unicode autocorrection feature is experimental and must be first enabled in the settings.
 
 
 <b>Development</b>
 The add-on is free/libre open-source software and developed on GitHub. <a href="https://github.com/rugk/unicodify">Fork it on GitHub</a> and contribute.
 <a href="https://github.com/rugk/unicodify/contribute">There are some easy issues to start with.</a>
 
-This extension works with modern Firefox and Thunderbird v87 or higher.
+This extension works with modern Firefox and Thunderbird v112 or higher.
 
 
 <b>Contribute</b>
