--- a/src/options/options.html
+++ b/src/options/options.html
@@ -103,17 +103,17 @@
 							<li>
 								<div class="line">
 									<input class="setting save-on-change" type="checkbox" id="autocorrectUnicodeFracts" data-optiongroup="autocorrect" name="autocorrectUnicodeFracts">
-									<label data-i18n="" data-opt-i18n-keep-children for="autocorrectUnicodeFracts">Convert fractions to Unicode characters</label>
+									<label data-i18n="__MSG_optionConvertFractions__" data-opt-i18n-keep-children for="autocorrectUnicodeFracts">Convert fractions to Unicode characters</label>
 								</div>
-								<span data-i18n="" data-opt-i18n-keep-children class="line indent helper-text">For example, this will replace <code>1/4</code> with ¼.</span>
+								<span data-i18n="__MSG_optionConvertFractionsDescr__" data-opt-i18n-keep-children class="line indent helper-text">For example, this will replace <code>1/4</code> with ¼.</span>
 							</li>
 
 							<li>
 								<div class="line">
 									<input class="setting save-on-change" type="checkbox" id="autocorrectUnicodeNumbers" data-optiongroup="autocorrect" name="autocorrectUnicodeNumbers">
-									<label data-i18n="__MSG_optionConvertFractions__" data-opt-i18n-keep-children for="autocorrectUnicodeNumbers">Convert numbers with fractions and mathematical constants to Unicode characters</label>
+									<label data-i18n="__MSG_optionConvertNumbers__" data-opt-i18n-keep-children for="autocorrectUnicodeNumbers">Convert numbers with fractions and mathematical constants to Unicode characters</label>
 								</div>
-								<span data-i18n="__MSG_optionConvertFractionsDescr__" data-opt-i18n-keep-children class="line indent helper-text">For example, this will replace <code>1234.25</code> with 1234¼.</span>
+								<span data-i18n="__MSG_optionConvertNumbersDescr__" data-opt-i18n-keep-children class="line indent helper-text">For example, this will replace <code>1234.25</code> with 1234¼.</span>
 							</li>
 						</ul>
 					</li>
